<resources>
    <string name="app_name">ATStaff</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="titile">Aviation Technical Staff</string>
    <string name="subtitile">Technical Staff</string>
    <string name="signin">Sign in to your account</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="hintName">Your Name</string>
    <string name="organization">Organization</string>
    <string name="hintOrganization">Your Organization</string>
    <string name="hintNationality">Your Nationality</string>
    <string name="email">Email</string>
    <string name="hintEmail">Your Email</string>
    <string name="user">User Name</string>
    <string name="hintUser">Your User</string>
    <string name="password">Password</string>
    <string name="account">Have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="returnwait">Return to Welcome Page</string>
    <string name="filter">Filter</string>
    <string name="nationality">Nationality</string>
    <string name="position">Position</string>
    <string name="prefs_file">PREFERENCE_FILE_KEY</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="email_error">The email is incorrect</string>
    <string name="name_error">Name too short</string>
    <string name="title">Titles</string>
    <string name="visa">Visa</string>
    <string name="license">License</string>
    <string name="course">Course</string>
    <string name="titiles">Titles</string>
    <string name="country">Country</string>
    <string name="date">Date</string>
    <string name="university">University</string>
    <string name="courseName">Course Name</string>
    <string name="validity">Validity</string>
    <string name="type">Type</string>
    <string name="entity">Entity</string>
    <string name="number">Number</string>
    <string name="updatePersonal">Update Profile Data</string>
    <string name="dni">DNI</string>
    <string name="hintDni">Your DNI</string>
    <string name="hintPosition">Your Position</string>
    <string name="twitter">Twitter</string>
    <string name="hintTwitter">Your Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="hintFacebook">Your Facebook</string>
    <string name="LinkedIn">LinkedIn</string>
    <string name="hintLinkedIn">Your LinkedIn</string>
    <string name="hintPhone">Your Phone</string>
    <string name="phone">Phone</string>
    <string name="returHome">Return to Home</string>
    <string name="id">ID</string>
    <string name="returDetail">Return to Detail</string>
    <string name="required">Required</string>
    <string name="update">Update</string>
    <string name="app_full_name">Aviation Technical Staff</string>
</resources>