<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/app_full_name">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:fontFamily="@font/blinker"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:fontFamily="@font/blinker"
                android:title="@string/menu_profile" />

            <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/ic_logout"
                android:fontFamily="@font/blinker"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>