<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="position"
            type="Integer" />
        <variable
            name="adapter"
            type="com.lega.atstaff.core.base.recycler.BaseRvAdapter" />
        <variable
            name="item"
            type="com.lega.atstaff.domain.models.Courses" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_personal_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/secundaryVariant">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/courseName"
                    android:fontFamily="@font/blinker"
                    android:textSize="12dp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/personal_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{item.name}"
                    android:textColor="@color/black"
                    android:fontFamily="@font/blinker"
                    tools:text="HOTEL UNO" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_organization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:layout_marginTop="8dp"
                    android:textSize="12dp"
                    android:textColor="@color/primary"
                    android:fontFamily="@font/blinker"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/personal_organization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{item.country}"
                    android:textColor="@color/black"
                    android:fontFamily="@font/blinker"
                    tools:text="HOTEL UNO" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tile_nationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/validity"
                    android:layout_marginTop="8dp"
                    android:textSize="12dp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/personal_nationality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{item.validity}"
                    android:textColor="@color/black"
                    android:fontFamily="@font/blinker"
                    tools:text="HOTEL UNO" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tile_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:layout_marginTop="8dp"
                    android:textSize="12dp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/personal_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{item.type}"
                    android:textColor="@color/black"
                    android:fontFamily="@font/blinker"
                    tools:text="HOTEL UNO" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="155dp"/>
    </com.google.android.material.card.MaterialCardView>
</layout>